# drone-vehicle-path-mapper

./: .gitignore  README.md  config.py  main.py  parse_srt.py  parsed_data.json  pyproject.toml  utils.py
demo/frontend/: bun.lockb  package.json  tailwind.config.js
demo/frontend/src/: App.css  App.tsx  atoms.ts  index.css  pathGEO.json  utils.ts
demo/frontend/src/components/: BaseMap.tsx  DroneFootageVideo.tsx  FoundVehiclesList.tsx
demo/frontend/src/components/ui/: resizable.tsx
demo/frontend/src/pages/: Home.tsx
demo/frontend/src/types/: global.ts  mapTypes.ts
detection/: car_tracker.py  histogram.py  yolo.py
geoprocessing/: coordinates.py  map_utils.py  simplification.py
preprocessing/: drone_data.py
runs/detect/train_nano_50epochs/: results.csv
runs/detect/train_nano_v11_50epochs/: args.yaml  results.csv
runs/detect/train_nano_v8_50epochs/: args.yaml  events.out.tfevents.1733614561.zenbook.535552.0
runs/detect/train_small_21epochs/: events.out.tfevents.1733712174.zenbook.1204957.0
runs/detect/train_small_33epochs/: args.yaml  events.out.tfevents.1733824501.zenbook.2188553.0
runs/detect/train_small_v11_35epochs/: args.yaml  results.csv
runs/detect/train_small_v8_21epochs/: args.yaml  results.csv
runs/detect/train_small_v8_33epochs/: results.csv
